--- a/picom.conf
+++ b/picom.conf
@@ -136,6 +136,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
   "80:class_g = 'Alacritty' && focused",
   "98:class_g = 'Alacritty' && !focused",
+  "80:class_g = 'kitty' && focused",
+  "98:class_g = 'kitty' && !focused",
 ]
 
 
