--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -38,16 +38,16 @@ window:
   # Specified in number of pixels.
   # If the position is not set, the window manager will handle the placement.
   # position:
-  #  x: 10
-  #  y: 10
+  #  x: 100
+  #  y: 100
 
   # Window padding (changes require restart)
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  padding:
-    x: 10
-    y: 10
+  # padding:
+  # x: 10
+  # y: 10
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -82,7 +82,7 @@ window:
   # title: Alacritty
 
   # Allow terminal applications to change Alacritty's window title.
-  # dynamic_title: true
+  dynamic_title: true
 
   # Window class (Linux/BSD only):
   #class:
@@ -115,10 +115,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Fira Code Medium
+    family: Iosevka Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    style: Medium
 
   # Bold font face
   bold:
@@ -126,10 +126,10 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fira Code
+    family: Iosevka Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    style: Semibold
 
   # Italic font face
   italic:
@@ -137,10 +137,10 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fira Code
+    family: Iosevka Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    style: Medium Oblique
 
   # Bold italic font face
   bolditalic:
@@ -148,10 +148,10 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fira Code
+    family: Iosevka Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
-    style: Bold 
+    style: Heavy Oblique
 
   # Point size
   size: 10.0
@@ -180,6 +180,10 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true 
 # Colors (Tomorrow Night)
+#
+import:
+  - ~/.config/alacritty/aura-theme.yml
+
 #colors:
   # Default colors
   #primary:
@@ -322,36 +326,6 @@ draw_bold_text_with_bright_colors: true
   # the default background. When set to `true` all cells will be transparent
   # regardless of their background color.
   #transparent_background_colors: false
-
-# Colors (Horizon Dark)
-colors:
-  # Primary colors
-  primary:
-    background: '0x1c1e26'
-    foreground: '0xe0e0e0'
-
-  # Normal colors
-  normal:
-    black: '0x16161c'
-    red: '0xe95678'
-    green: '0x29d398'
-    yellow: '0xfab795'
-    blue: '0x26bbd9'
-    magenta: '0xee64ac'
-    cyan: '0x59e1e3'
-    white: '0xd5d8da'
-
-  # Bright colors
-  bright:
-    black: '0x5b5858'
-    red: '0xec6a88'
-    green: '0x3fdaa4'
-    yellow: '0xfbc3a7'
-    blue: '0x3fc4de'
-    magenta: '0xf075b5'
-    cyan: '0x6be4e6'
-    white: '0xd5d8da'
-  
 
 #bell:
   # Visual Bell Animation
