--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -45,9 +45,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  # padding:
-  # x: 10
-  # y: 10
+  #padding:
+  #  x: 0
+  #  y: 30
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -61,17 +61,17 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  #decorations: full
+  decorations: buttonless # full
 
   # Background opacity
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 1.0 
+  opacity: 0.9
   #
   # Values for `startup_mode`:
   #   - Windowed
-  #   - Maximized
+  #   - Maximizedbuttonless
   #   - Fullscreen
   #
   # Values for `startup_mode` (macOS only):
@@ -154,7 +154,7 @@ font:
     style: Extrabold Italic
 
   # Point size
-  size: 10.0
+  size: 18
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
